Version bump and minor changes