@@ -2,11 +2,12 @@ package com.shaunthomas999.advanced.dataTypes;
 
 public class MyInteger {
 
-    public static void main(String[] args) {
-        int someNumber = 2+3;
+  public static void main(String[] args) {
+    int someNumber = 2 + 3;
 
-        Integer someNumberObj = new Integer(someNumber);
+//    Integer someNumberObj = Integer.valueOf(someNumber);
+    Integer someNumberObj = someNumber;
 
-        System.out.println(someNumberObj);
-    }
+    System.out.println(someNumberObj);
+  }
 }
